<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_select_folder"
        android:icon="@drawable/ic_search"
        android:title="@string/select_folder" />
    <item
        android:id="@+id/action_show_album_art"
        android:checkable="true"
        android:checked="true"
        android:title="@string/show_album_art_in_playlist" />
    <item
        android:id="@+id/action_track_details"
        android:icon="@drawable/ic_info"
        android:title="@string/track_details" />
    <item
        android:id="@+id/action_rescan"
        android:icon="@drawable/ic_refresh"
        android:title="@string/rescan_library" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about_omniplay" />
</menu>
